# orbviz

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE.md  README.md  application.py  bugs.md  debugging.md  features.md  pyproject.toml  refactor.md  requirements.txt  use.ipynb
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  question.yaml
.github/workflows/: pull_request.yaml
data/TLEs/: iridiumNEXT_latest.tle  iridiumSMALL_latest.tle  spirit_latest.tle  swift_latest.tle  thuraya_latest.tle
data/constellation_configs/: GNSS_NAVSTAR.json  Iridium_NEXT.json  Thuraya.json
data/events/: example_events.csv
data/ground_stations/: greenwhich.json
data/groundstation_configs/: quito.json
data/land_boundaries/: landmass_points.npy
data/pointing/: 20240108_ECI_parallel.csv
data/primary_configs/: ISS.json  ISS_XYZ.json  ISS_XYnegZ.json  multi_sat_example.json
data/spacecraft/: spirit.json
docs/: data_structures.md  speed_precision_tradeoff_eci2ecf.md
orbviz/: __init__.py
orbviz/model/data_models/: base_models.py  constellation_data.py  data_types.py  datapane.py  earth_raycast_data.py  event_data.py  groundstation_data.py  history_data.py  sphere_img_data.py  timeseries.py
orbviz/model/geometry/: polygons.py  polyhedra.py  primgeom.py  spherical.py  transformations.py
orbviz/model/lens_models/: pinhole.py
orbviz/util/: array_u.py  constants.py  conversion.py  epoch_u.py  exceptions.py  formatting.py  hashing.py  list_u.py  logging.py  orbital_u.py  paths.py  threading.py
orbviz/visualiser/: colours.py  window.py
orbviz/visualiser/assets/: base_assets.py  constellation.py  earth.py  events.py  gizmo.py  groundstations.py  moon.py  orbit.py  sensors.py  spacecraft.py  sun.py  widgets.py
orbviz/visualiser/cameras/: RestrictedPanZoom.py  static2d.py
orbviz/visualiser/contexts/: base_context.py  blank_context.py  history2d_context.py  history3d_context.py  history_configuration_context.py  sensor_views_context.py  timeseries_plot_context.py
orbviz/visualiser/contexts/canvas_wrappers/: base_cw.py  history2d_cw.py  history3d_cw.py  sensor_views_cw.py
orbviz/visualiser/contexts/figure_wrappers/: base_fw.py  timeseries_plot_fw.py
orbviz/visualiser/interface/: controls.py  dialogs.py  widgets.py
orbviz/visualiser/shells/: base_shell.py  historical_shell.py  planning_shell.py
orbviz/visualiser/visuals/: polygons.py
resources/actions/: 2D-history.json  2D-planning.json  3D-history.json  3D-planning.json  3d-history.json  3d-planning.json  all.json  sensors-view-history.json  timeseries-history.json
resources/earth3D/land_boundaries/: landmass_connections.npy
satplot/: __init__.py  history.py  utils.py
satplot/model/: Spacecraft.py  exceptions.py  orbit.py  spacecraft.py  timespan.py
satplot/model/data_models/: base.py  base_models.py  constellation_data.py  data_types.py  datapane.py  earth_raycast_data.py  event_data.py  groundstation_data.py  history_data.py  sphere_img_data.py
satplot/model/geometry/: polygons.py  polyhedra.py  primgeom.py  printgeom.py  spherical.py  transformations.py
satplot/model/lens_models/: pinhole.py
satplot/util/: array_u.py  celestrak.py  constants.py  conversion.py  epoch_u.py  exceptions.py  hashing.py  list_u.py  logging.py  orbital_u.py  paths.py  pymap3d.py  spacetrack.py  threading.py
satplot/visualiser/: Assets.py  Visualisation.py  basevisualiser.py  canvaswrapper.py  canvaswrappers.py  colours.py  controls.py  orbit.py  utils.py  window.py
satplot/visualiser/assets/: axis_indicator.py  base.py  base_assets.py  constellation.py  earth.py  events.py  gizmo.py  groundstations.py  moon.py  orbit.py  sensors.py  sky.py  spacecraft.py  sun.py  widgets.py
satplot/visualiser/cameras/: RestrictedPanZoom.py  cameras.py  static2d.py
satplot/visualiser/contexts/: base.py  base_context.py  blank.py  blank_context.py  history2d_context.py  history3d.py  history3d_context.py  history_configuration_context.py  sensor_view_context.py  sensor_views_context.py
satplot/visualiser/contexts/canvas_wrappers/: base.py  base_cw.py  cw_container.py  history2d_cw.py  history3d.py  history3d_cw.py  sensor_view3d_cw.py  sensor_views_cw.py
satplot/visualiser/controls/: collapsiblecontainer.py  console.py  controls.py  dialogs.py  widgets.py
satplot/visualiser/interface/: console.py  controls.py  datapane.py  dialogs.py  widgets.py
satplot/visualiser/shells/: base_shell.py  historical_shell.py  planning_shell.py
satplot/visualiser/visuals/: polygons.py
tests/unit/unit_model/unit_geometry/: test_polygons.py
